# kasablanca-svn

kasablanca-python/trunk/: README  TODO  circlebutton.py  dirmodel.py  dirview.py  fadingsvgwidget.py  ftpdirmodel.py  guisession.py  iconbutton.py  kasablanca.py  kasablancamainwindow.ui  locationbar.py  progresswidget.py  session.py  sessionframe.py  settingswidget.py  settingswidget.ui  svgwidget.py  ui_kasablancamainwindow.py
kio-ftps/trunk/: CMakeLists.txt  README  ftp.cpp  ftp.h
